SONARPHP-1366 Get rid of `SetUtils::immutableSetOf`